eureka-Cluster-Master集成Logback-Test

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Compiled class file
-*.class
-
+# Idea需要忽略的文件
+.idea
+*.iml
 # Log file
 *.log
 
@@ -20,3 +21,4 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/*/target/
