--- a/test-eurk-server-cluster-master/src/main/resources/application.yml
+++ b/test-eurk-server-cluster-master/src/main/resources/application.yml
@@ -8,22 +8,21 @@ spring:
 
 eureka:
   instance:
-    #hostname: localhost
-    ip-address: 127.0.0.1   # 当下面的为true时  才能使用当前的ip
-    prefer-ip-address: true  # 在页面上不使用默认的形式展现名称 而使用 ip：端口口的形式 显示 名称
-    lease-renewal-interval-in-seconds: 10  # 多长时间获取一次心跳
-    lease-expiration-duration-in-seconds: 30  # 发呆时间 从上一次获取到心跳到下一次获取心跳的间隔时间
-    app-group-name: test-eureka-server-cluster-master  #组名称
-    instance-id: 127.0.0.1  # 如果在同一个机器中部署多个实列，则依次来区分不同的实列
+    hostname: Cluster_Master
+    ip-address: 127.0.0.1                                    # 当下面的为true时  才能使用当前的ip
+    prefer-ip-address: true                                # 在页面上不使用默认的形式展现名称 而使用 ip：端口口的形式 显示 名称
+    lease-renewal-interval-in-seconds: 10                 # 多长时间获取一次心跳
+    lease-expiration-duration-in-seconds: 30              # 发呆时间 从上一次获取到心跳到下一次获取心跳的间隔时间
+    instance-id: ${eureka.instance.hostname}:${eureka.instance.ip-address}:${server.port}
   server:
-    enable-self-preservation: true  #开启自我保护模式
-    eviction-interval-timer-in-ms: 30000 # server端清理无效节点的时间间隔 默认为 60*1000
+    enable-self-preservation: true                        #开启自我保护模式
+    eviction-interval-timer-in-ms: 30000                  # server端清理无效节点的时间间隔 默认为 60*1000
   client:
-    fetch-registry: false  # 自己为 server 不让自己注册到自己的服务器上 当启用服务注册中心时  需要改为true
-    register-with-eureka: false  # 同理 不能注册到自己上面  当启用服务注册中心时  需要改为true
+    fetch-registry: true                                    # 自己为 server 不让自己注册到自己的服务器上 当启用服务注册中心时  需要改为true
+    register-with-eureka: true                              # 同理 不能注册到自己上面  当启用服务注册中心时  需要改为true
+    registry-fetch-interval-seconds: 30
     service-url:
-      defaultZone: http://${security.user.name}:${security.user.password}@127.0.0.1:${server.port}/euraka/ # 如果使用高可用时  可以使用多个IP 同一个端口号 用逗号隔开  开启上面的 注册
-    registry-fetch-interval-seconds: 30  # 客户端 多长时间拉去注册服务一次
+      defaultZone: http://${security.user.name}:${security.user.password}@127.0.0.1:9999/euraka/  # 如果使用高可用时  可以使用多个IP 同一个端口号 用逗号隔开  开启上面的 注册
 security:
   user:
     name: testService
