--- a/test-eurk-server-cluster-master/src/main/resources/application.yml
+++ b/test-eurk-server-cluster-master/src/main/resources/application.yml
@@ -1,28 +1,26 @@
-#定义当前工程的启动的端口号
 server:
   port: 9888
-#定义当前工程的服务名称
 spring:
   application:
     name: test-eurek-server-cluster-master
 
 eureka:
   instance:
-    hostname: Cluster_Master
-    ip-address: 127.0.0.1                                    # 当下面的为true时  才能使用当前的ip
+    #hostname: server
+    ip-address: master                                    # 当下面的为true时  才能使用当前的ip
     prefer-ip-address: true                                # 在页面上不使用默认的形式展现名称 而使用 ip：端口口的形式 显示 名称
     lease-renewal-interval-in-seconds: 10                 # 多长时间获取一次心跳
     lease-expiration-duration-in-seconds: 30              # 发呆时间 从上一次获取到心跳到下一次获取心跳的间隔时间
-    instance-id: ${eureka.instance.hostname}:${eureka.instance.ip-address}:${server.port}
+    instance-id: ${eureka.instance.hostname}:${eureka.instance.ip-address}:${server.port}  # 定义当前应用的唯一标识  在页面上显示使用
   server:
     enable-self-preservation: true                        #开启自我保护模式
     eviction-interval-timer-in-ms: 30000                  # server端清理无效节点的时间间隔 默认为 60*1000
   client:
-    fetch-registry: true                                    # 自己为 server 不让自己注册到自己的服务器上 当启用服务注册中心时  需要改为true
-    register-with-eureka: true                              # 同理 不能注册到自己上面  当启用服务注册中心时  需要改为true
+    fetch-registry: false                                    # 自己为 server 不让自己注册到自己的服务器上 当启用服务注册中心时  需要改为true
+    register-with-eureka: false                              # 同理 不能注册到自己上面  当启用服务注册中心时  需要改为true
     registry-fetch-interval-seconds: 30
     service-url:
-      defaultZone: http://${security.user.name}:${security.user.password}@127.0.0.1:9999/euraka/  # 如果使用高可用时  可以使用多个IP 同一个端口号 用逗号隔开  开启上面的 注册
+      defaultZone: http://${security.user.name}:${security.user.password}@slave:9999/eureka/,http://${security.user.name}:${security.user.password}@master:9999/eureka/  # 如果使用高可用时  可以使用多个IP 同一个端口号 用逗号隔开  开启上面的 注册
 security:
   user:
     name: testService
