--- a/test-eurk-server-cluster-master/pom.xml
+++ b/test-eurk-server-cluster-master/pom.xml
@@ -4,12 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>test-eurk-server-cluster-master</artifactId>
     <parent>
         <groupId>com.springboot.test</groupId>
         <artifactId>test-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+
+    <artifactId>test-eurk-server-cluster-master</artifactId>
 
     <!--配置不同环境下 通过-->
     <profiles>
@@ -58,7 +59,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka-server</artifactId>
@@ -84,19 +84,18 @@
         </resources>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
                 <executions>
                     <execution>
                         <id>maven-compiler</id>
-                        <!--编译时 绑定的 Maven的 声明周期 -->
-                        <phase>package</phase>
-                        <goals>
-                            <!--compile 绑定的Maven的生命周期，编译时 编译的是 main下的源代码
-                            如果是 testCompile  则编译时 编译的是 测试环境下的 源代码-->
-                            <goal>compile</goal>
-                        </goals>
+                        <!--编译时 绑定的 Maven的 声明周期  与下面的 goal标签一致 -->
+                        <phase>compile</phase>
+                       <!-- <goals>
+                            &lt;!&ndash;compile 绑定的Maven的生命周期，编译时 编译的是 main下的源代码
+                            如果是 testCompile  则编译时 编译的是 测试环境下的 源代码&ndash;&gt;
+                            <goal></goal>
+                        </goals>-->
                         <configuration>
                             <source>${maven.compiler.source}</source>
                             <target>${maven.compiler.target}</target>
