--- a/test-eureka-client/pom.xml
+++ b/test-eureka-client/pom.xml
@@ -16,6 +16,13 @@
 
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.springboot.test</groupId>
+            <artifactId>test-eureka-client-test</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
