--- a/test-eureka-server-cluster-slave/pom.xml
+++ b/test-eureka-server-cluster-slave/pom.xml
@@ -47,6 +47,12 @@
             <artifactId>spring-boot-actuator</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
