--- a/test-eurk-server-cluster-master/pom.xml
+++ b/test-eurk-server-cluster-master/pom.xml
@@ -70,6 +70,12 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
     </dependencies>
     <build>
         <!--编译时 需要编译的资源-->
