--- a/test-eureka-client-test/pom.xml
+++ b/test-eureka-client-test/pom.xml
@@ -18,6 +18,19 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>1.5.8.RELEASE</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.ruijc</groupId>
+            <artifactId>spring-boot-starter-mybatis</artifactId>
+            <version>3.2.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+            <version>1.5.6.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
 
