--- a/test-eureka-client/pom.xml
+++ b/test-eureka-client/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.springboot.test</groupId>
-        <artifactId>test-parent</artifactId>
+        <artifactId>wsd</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
@@ -37,11 +37,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-actuator</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
         </dependency>
 
         <dependency>
