--- a/test-eurk-server-cluster-master/pom.xml
+++ b/test-eurk-server-cluster-master/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>com.springboot.test</groupId>
-        <artifactId>test-parent</artifactId>
+        <artifactId>wsd</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
