--- a/test-eureka-web/pom.xml
+++ b/test-eureka-web/pom.xml
@@ -50,6 +50,11 @@
             <version>2.6.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
     </dependencies>
 
 
