RPC调通并更改控制台输出的日志的长度

--- a/test-eureka-web/src/main/resources/application.yml
+++ b/test-eureka-web/src/main/resources/application.yml
@@ -20,6 +20,10 @@ endpoints:
   enabled: true
   refresh:
     enabled: true
+  health:
+    enabled: true
+  actuator:
+    enabled: true
 feign:
   compression:
     request:
