--- a/test-eureka-web/pom.xml
+++ b/test-eureka-web/pom.xml
@@ -33,6 +33,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-actuator</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.springboot.test</groupId>
             <artifactId>test-eureka-client-test</artifactId>
             <version>1.0-SNAPSHOT</version>
