增加使用RSA算法生成公匙 私匙 以及 签名

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>test-eureka-client-test</module>
         <module>test-kafka</module>
         <module>test-eureka-web</module>
+        <module>test-auth-token</module>
     </modules>
 
 
