--- a/test-eureka-web/pom.xml
+++ b/test-eureka-web/pom.xml
@@ -60,6 +60,13 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
+        <!--增加 shiro 相关依赖 已包括所有的相关依赖 -->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-all</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+
     </dependencies>
 
 
