--- a/test-eureka-web/pom.xml
+++ b/test-eureka-web/pom.xml
@@ -67,6 +67,30 @@
             <version>1.2.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.springboot.test</groupId>
+            <artifactId>test-auth-token</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.40</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
+        <!--集成mongodb-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+
     </dependencies>
 
 
