--- a/test-eureka-server-cluster-slave/pom.xml
+++ b/test-eureka-server-cluster-slave/pom.xml
@@ -16,17 +16,40 @@
         <eureka.server.version>1.3.4.RELEASE</eureka.server.version>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-eureka-server</artifactId>
+            <version>1.3.4.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-actuator</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+    </dependencies>
+
     <profiles>
         <profile>
             <id>local</id>
             <properties>
                 <profileActive></profileActive>
-                <serverBaseUrl>http://localhost:9999</serverBaseUrl>
+                <!--<serverBaseUrl>http://localhost:9999</serverBaseUrl>-->
                 <assemblyPath>local</assemblyPath>
             </properties>
             <activation>
                 <activeByDefault>true</activeByDefault>
-                <jdk>${java.version}</jdk>
             </activation>
         </profile>
         <profile>
@@ -37,25 +60,6 @@
             </properties>
         </profile>
     </profiles>
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-eureka-server</artifactId>
-            <version>${eureka.server.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-actuator</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
-    </dependencies>
     <build>
         <resources>
             <resource>
@@ -66,22 +70,20 @@
             </resource>
         </resources>
         <plugins>
+            <!--打包jar包-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <!--自定义执行器-->
-                <executions>
-                    <execution>
-                        <id>slave-complier-zip</id>
-                        <phase>compile</phase>
-                        <configuration>
-                            <source>${maven.compiler.source}</source>
-                            <target>${maven.compiler.target}</target>
-                            <encoding>${project.build.sourceEncoding}</encoding>
-                        </configuration>
-                    </execution>
-                </executions>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.test.spring.cloud.eureka.slave.EurekaSlaveApplication</mainClass>
+                            <addClasspath>true</addClasspath>
+                        </manifest>
+                    </archive>
+                </configuration>
             </plugin>
+            <!--打包成zip包-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -93,13 +95,6 @@
                     </dependency>
                 </dependencies>
                 <configuration>
-                    <archive>
-                        <manifest>
-                            <!--指定启动类-->
-                            <mainClass>com.test.spring.cloud.eureka.slave.EurekaSlaveApplication</mainClass>
-                            <addMainClasspath>true</addMainClasspath>
-                        </manifest>
-                    </archive>
                     <appendAssemblyId>false</appendAssemblyId>
                     <descriptors>
                         <descriptor>src/main/assembly/${assemblyPath}/assembly.xml</descriptor>
@@ -118,5 +113,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
