--- a/test-eureka-server-cluster-slave/src/main/resources/application.yml
+++ b/test-eureka-server-cluster-slave/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: test-eureka-server-cluster-slave
   profiles:
-    active: @profileActive@
+    active: '@profileActive@'
 eureka:
   instance:
     #hostname: slave
