--- a/test-eureka-client/src/main/resources/application.yml
+++ b/test-eureka-client/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
     poolPreparedStatements: true
     maxOpenPreparedStatements: 20
   profiles:
-    active: @profileActive@
+    active: '@profileActive@'
 mybatis:
   mapper-locations: classpath*:com/test/eureka/web/client/**/dao/**/*Mapper.xml  # 不能有空格
   config-location: classpath:mybatis-config.xml
