--- a/test-eureka-web/pom.xml
+++ b/test-eureka-web/pom.xml
@@ -95,8 +95,7 @@
         <profile>
             <id>local</id>
             <properties>
-                <profileActive></profileActive>
-                <assemblyPath>test</assemblyPath>
+                <assemblyPath>local</assemblyPath>
             </properties>
             <activation>
                 <activeByDefault>true</activeByDefault>
@@ -131,43 +130,19 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>web-compiler</id>
-                        <phase>compile</phase>
-                        <configuration>
-                            <source>${maven.compiler.source}</source>
-                            <target>${maven.compiler.target}</target>
-                            <encoding>${project.build.sourceEncoding}</encoding>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
                     <archive>
-                        <mainfest>
+                        <manifest>
                             <addClasspath>true</addClasspath>
                             <mainClass>com.test.eureka.web.WebApplication</mainClass>
-                        </mainfest>
+                        </manifest>
                     </archive>
                 </configuration>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <dependencies>
-                    <dependency>
-                        <groupId>com.springboot.test</groupId>
-                        <artifactId>test-eureka-web</artifactId>
-                        <version>1.0-SNAPSHOT</version>
-                    </dependency>
-                </dependencies>
                 <executions>
                     <execution>
                         <id>web-zip</id>
