--- a/test-eureka-client/pom.xml
+++ b/test-eureka-client/pom.xml
@@ -78,6 +78,7 @@
                 <directory>src/main/java</directory>
                 <includes>
                     <include>**/*.xml</include>
+                    <include>**/*.yml</include>
                 </includes>
             </resource>
             <resource>
