--- a/test-eureka-web/pom.xml
+++ b/test-eureka-web/pom.xml
@@ -14,7 +14,6 @@
     <description>客户端,服务提供方</description>
 
     <dependencies>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -115,6 +114,7 @@
             <resource>
                 <directory>src/main/resources</directory>
                 <includes>
+                    <include>**/*.yml</include>
                     <include>**/*.xml</include>
                     <include>**/*.properties</include>
                 </includes>
