修改日志的输出格式

--- a/test-eurk-server-cluster-master/src/main/resources/application-dev.yml
+++ b/test-eurk-server-cluster-master/src/main/resources/application-dev.yml
@@ -3,7 +3,17 @@ server:
 spring:
   application:
     name: test-eurek-server-cluster-master
-
+  data:
+    mongodb:
+      username: dba
+      password: dba
+      host: 127.0.0.1
+      port: 27017
+      uri: mongodb://dba:dba@127.0.0.1:27017/test
+      authentication-database: test
+      database: test
+      repositories:
+        enabled: true
 eureka:
   instance:
     #hostname: server
