--- a/test-eureka-web/pom.xml
+++ b/test-eureka-web/pom.xml
@@ -62,10 +62,27 @@
         <!--增加 shiro 相关依赖 已包括所有的相关依赖 -->
         <dependency>
             <groupId>org.apache.shiro</groupId>
-            <artifactId>shiro-all</artifactId>
-            <version>1.2.3</version>
+            <artifactId>shiro-spring-boot-starter</artifactId>
+            <version>1.4.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-core</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-ehcache</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.panchitoboy</groupId>
+            <artifactId>shiro-jwt</artifactId>
+            <version>1.3.0</version>
+        </dependency>
         <!--<dependency>
             <groupId>com.springboot.test</groupId>
             <artifactId>test-auth-token</artifactId>
@@ -89,6 +106,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
+
+
+        <dependency>
+            <groupId>com.springboot.test</groupId>
+            <artifactId>test-auth-token</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
     <profiles>
         <profile>
