--- a/test-eureka-web/pom.xml
+++ b/test-eureka-web/pom.xml
@@ -60,7 +60,7 @@
         </dependency>
 
         <!--增加 shiro 相关依赖 已包括所有的相关依赖 -->
-        <dependency>
+<!--        <dependency>
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-spring-boot-starter</artifactId>
             <version>1.4.0</version>
@@ -82,7 +82,7 @@
             <groupId>com.github.panchitoboy</groupId>
             <artifactId>shiro-jwt</artifactId>
             <version>1.3.0</version>
-        </dependency>
+        </dependency>-->
         <!--<dependency>
             <groupId>com.springboot.test</groupId>
             <artifactId>test-auth-token</artifactId>
@@ -125,7 +125,6 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
         </profile>
-
         <profile>
             <id>dev</id>
             <properties>
@@ -139,9 +138,7 @@
             <resource>
                 <directory>src/main/resources</directory>
                 <includes>
-                    <include>**/*.yml</include>
-                    <include>**/*.xml</include>
-                    <include>**/*.properties</include>
+                    <include>**/*.*</include>
                 </includes>
             </resource>
             <resource>
@@ -186,9 +183,5 @@
                 </configuration>
             </plugin>
         </plugins>
-
     </build>
-
-    
-
 </project>
