配置druid连接池

--- a/test-eureka-client/src/main/resources/application-dev.yml
+++ b/test-eureka-client/src/main/resources/application-dev.yml
@@ -4,11 +4,10 @@ spring:
   application:
     name: test-eureka-client
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/rxk?serverTimezone=UTC&characterEncoding=UTF-8
-    username: helloworld
-    password: 1234567890
+    username: test
+    password: test
     driver-class-name: com.mysql.cj.jdbc.Driver
-    filters: stat
+    filters: stat,wall,slf4j
     maxActive: 20
     initialSize: 1
     maxWait: 60000
@@ -21,6 +20,11 @@ spring:
     testOnReturn: false
     poolPreparedStatements: true
     maxOpenPreparedStatements: 20
+    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+    type: com.alibaba.druid.pool.DruidDataSource
+    url: jdbc:mysql://192.168.60.76:3306/rxk?serverTimezone=UTC&characterEncoding=UTF-8
+  profiles:
+    active: @profileActive@
 mybatis:
   mapper-locations: classpath*:com/test/eureka/web/client/**/dao/**/*Mapper.xml  # 不能有空格
   config-location: classpath:mybatis-config.xml
