--- a/test-eureka-web/src/main/resources/application.yml
+++ b/test-eureka-web/src/main/resources/application.yml
@@ -7,12 +7,14 @@ spring:
     active: '@profileActive@'
   data:
     mongodb:
-      host: 127.0.0.1
+      host: 192.168.60.101
       username: dba
       password: dba
       authentication-database: test #当前用户认证的数据库 在那个数据库创建的用户 在那个数据库认证
       database: test   #不是 Collections文件下面的 而是 指定的库 否则会自定义根据Collection_name创建数据库
       port: 27017
+      repositories:
+        enabled: true
 eureka:
   instance:
     lease-renewal-interval-in-seconds: 10 #获取心跳的时间
