--- a/test-eureka-client/pom.xml
+++ b/test-eureka-client/pom.xml
@@ -47,6 +47,13 @@
             <version>6.0.6</version>
         </dependency>
 
+        <!--数据库连接池-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.7</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-jdbc</artifactId>
@@ -78,13 +85,14 @@
                 <directory>src/main/java</directory>
                 <includes>
                     <include>**/*.xml</include>
-                    <include>**/*.yml</include>
                 </includes>
             </resource>
             <resource>
                 <directory>src/main/resources</directory>
+                <filtering>true</filtering>
                 <includes>
                     <include>**/*.*</include>
+                    <include>**/application-${profileActive}.yml</include>
                 </includes>
             </resource>
         </resources>
