--- a/test-eureka-client/src/main/resources/application.yml
+++ b/test-eureka-client/src/main/resources/application.yml
@@ -3,12 +3,14 @@ server:
 spring:
   application:
     name: test-eureka-client
+  profiles:
+    active: "@profileActive@"
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/rxk?serverTimezone=UTC&characterEncoding=UTF-8
     username: helloworld
     password: 1234567890
     driver-class-name: com.mysql.cj.jdbc.Driver
-    filters: stat
+    filters: stat,wall,slf4j
     maxActive: 20
     initialSize: 1
     maxWait: 60000
@@ -21,8 +23,8 @@ spring:
     testOnReturn: false
     poolPreparedStatements: true
     maxOpenPreparedStatements: 20
-  profiles:
-    active: '@profileActive@'
+    connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+    type: com.alibaba.druid.pool.DruidDataSource
 mybatis:
   mapper-locations: classpath*:com/test/eureka/web/client/**/dao/**/*Mapper.xml  # 不能有空格
   config-location: classpath:mybatis-config.xml
